GNOME Bugzilla – Bug 696977
Dialog title is not translated
Last modified: 2014-05-30 11:33:03 UTC
Created attachment 240217 [details] A screenshot of the issue The title of connecting to local network dialog ("Empathy Accounts") is not translated, despite translation being 100% complete.
Created attachment 272491 [details] [review] Add missing call for translation Missed call makes the title to not be correctly localized.
Ping? Can this patch be applied?
Merged; thanks for the patch!