Add missing textdomain() call

https://bugzilla.gnome.org/show_bug.cgi?id=696977